<resources>
    <string name="app_name">AgendaBuilder</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="plus_add_day">+ Add a day</string>
    <string name="plus_add_activity">+ Add activity</string>
    <string name="previous_day">Previous</string>
    <string name="next_day">Next</string>

    <string name="start_time">Start time:</string>
    <string name="end_time">End time:</string>
    <string name="total_length">Total length:</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

    <string-array name="type_array">
        <item>Presentation</item>
        <item>Group Work</item>
        <item>Discussion</item>
        <item>Break</item>
    </string-array>

    <string-array name="type_array_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>
