<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/page_main_view_id"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Within this frame the content for TaskView could be -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_activities_box_height">

            <Button
                android:id="@+id/add_task_button"
                android:onClick="addTask"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/activity_medium_text_background"
                android:layout_gravity="top|center_horizontal"
                android:background="@color/green"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_medium_text"
                android:text="@string/plus_add_activity"/>

            <!-- The box surrounding added tasks/activities -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_activities_box_margin"
                android:layout_marginBottom="@dimen/activity_minimal_margin">

                <!-- The following four views in the frame layout together form the activity box -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_line_width"
                    android:layout_gravity="top"
                    android:background="@color/black_overlay"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_line_width"
                    android:layout_gravity="bottom"
                    android:background="@color/black_overlay"/>
                <View
                    android:layout_width="@dimen/activity_line_width"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:background="@color/black_overlay"/>
                <View
                    android:layout_width="@dimen/activity_line_width"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:background="@color/black_overlay"/>

                <!-- The added tasks will be added in this relative layout -->
                <ListView
                    android:id="@+id/box_tasks_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </ListView>

            </FrameLayout>

        </FrameLayout>

        <!-- Within this frame the content for DayView could be -->
        <FrameLayout
            android:id="@+id/day_x_box"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_day_box_height"
            android:layout_marginTop="@dimen/activity_activities_box_height">

            <TextView
                android:id="@+id/which_day_title"
                android:layout_width="@dimen/activity_medium_view_height"
                android:layout_height="@dimen/activity_text_view_height"
                android:gravity="start|center_vertical"
                android:textSize="@dimen/activity_medium_text"
                android:text="Day 1"/>

            <FrameLayout
                android:layout_width="@dimen/activity_text_box_width"
                android:layout_height="@dimen/activity_text_view_height"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_gravity="top|end">

                <TextView
                    android:layout_width="@dimen/activity_medium_view_height"
                    android:layout_height="@dimen/activity_small_text_background"
                    android:layout_gravity="top|start"
                    android:textSize="@dimen/activity_small_text"
                    android:text="@string/start_time"/>
                <LinearLayout
                    android:layout_width="@dimen/activity_start_time_box_width"
                    android:layout_height="@dimen/activity_medium_text"
                    android:layout_gravity="top|center_horizontal"
                    android:gravity="center_horizontal">
                    <EditText
                        android:id="@+id/start_time_hour"
                        android:layout_width="@dimen/activity_start_time_part_width"
                        android:layout_height="match_parent"
                        android:gravity="end"
                        android:inputType="number"
                        android:maxLength="2"
                        android:ems="10"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text=":"/>
                    <EditText
                        android:id="@+id/start_time_minute"
                        android:layout_width="@dimen/activity_start_time_part_width"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:inputType="number"
                        android:maxLength="2"
                        android:ems="10"/>
                </LinearLayout>


                <TextView
                    android:layout_width="@dimen/activity_medium_view_height"
                    android:layout_height="@dimen/activity_small_text_background"
                    android:layout_gravity="center_vertical|start"
                    android:textSize="@dimen/activity_small_text"
                    android:text="@string/end_time"/>
                <TextView
                    android:id="@+id/end_time"
                    android:layout_width="@dimen/activity_start_time_box_width"
                    android:layout_height="@dimen/activity_small_text_background"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/activity_small_text"
                    android:text="00:00"/>

                <TextView
                    android:layout_width="@dimen/activity_medium_view_height"
                    android:layout_height="@dimen/activity_small_text_background"
                    android:layout_gravity="bottom|start"
                    android:textSize="@dimen/activity_small_text"
                    android:text="@string/total_length"/>
                <TextView
                    android:id="@+id/total_length"
                    android:layout_width="@dimen/activity_start_time_box_width"
                    android:layout_height="@dimen/activity_small_text_background"
                    android:layout_gravity="bottom|center_horizontal"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/activity_small_text"
                    android:text="0 min"/>

                <ImageView
                    android:layout_width="@dimen/activity_text_view_height"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:background="@color/blue"/>

            </FrameLayout>

            <!-- The box surrounding the tasks of a day -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_text_view_height">

                <!-- The following four views in the frame layout together form the activity box -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_line_width"
                    android:layout_gravity="top"
                    android:background="@color/black_overlay"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_line_width"
                    android:layout_gravity="bottom"
                    android:background="@color/black_overlay"/>
                <View
                    android:layout_width="@dimen/activity_line_width"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:background="@color/black_overlay"/>
                <View
                    android:layout_width="@dimen/activity_line_width"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:background="@color/black_overlay"/>

                <!-- The added tasks will be added in this relative layout -->
                <ListView
                    android:id="@+id/box_day_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </ListView>

            </FrameLayout>

        </FrameLayout>

        <!-- The button represent the current content of AddDayView -->
        <Button
            android:id="@+id/add_day_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_medium_text_background"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/green"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_medium_text"
            android:text="@string/plus_add_day" />

        <!-- Buttons for navigating between days -->
        <Button
            android:id="@+id/previous_day_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_medium_text"
            android:layout_gravity="bottom|start"
            android:background="@color/green"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_small_text"
            android:text="@string/previous_day"/>
        <Button
            android:id="@+id/next_day_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_medium_text"
            android:layout_gravity="bottom|end"
            android:background="@color/green"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_small_text"
            android:text="@string/next_day"/>

    </FrameLayout>

</RelativeLayout>
